terraform/infrastructure-modules/vpc/2-igw.tf
# Internet getway fo subnets
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id

  tags = {
    Name = "${var.env}-igw"
  }
}
